Fix: spacing

--- a/src/app/components/comment-list/comment/comment.component.scss
+++ b/src/app/components/comment-list/comment/comment.component.scss
@@ -21,7 +21,13 @@
 
     pre
     {
-        margin: 0.5em 0 1em 0;
+        margin: 0;
+        margin-top: 0.5em;
+    }
+
+    add-comment-form
+    {
+        margin-top: 1em;
     }
 
     footer
